suite des formulaires et les relations

--- a/templates/article/article_edit.html.twig
+++ b/templates/article/article_edit.html.twig
@@ -31,7 +31,7 @@
 <td>{{ articles.contenu }}</td>
 <td>{{ articles.image }}</td>
 <td>{{ articles.resume }}</td>
-<td>{{ articles.date|date("d/m/Y") }}</td>
+<td>{{ articles.date|Date("d/m/Y") }}</td>
 </tr>
 </tbody>
 </table>
