--- a/templates/auteur/index.html.twig
+++ b/templates/auteur/index.html.twig
@@ -63,7 +63,7 @@
 							{{auteur.email}}
 						</td>
 
-						 <ul><td>{% for art in auteur.article %}
+						 <ul><td>{% for art in auteur.articles %}
 							 {{ art.titre }}
 						 {% endfor %}
 						</td></ul>
