premier commit sécurité pour le fichier security.yaml

--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -37,7 +37,7 @@
 							<th> photo </th>
 							<th> dateNaissance </th>
 							<th> login </th>
-							<th> passWord </th>
+							<th> plainPassword</th>
 							<th> adresse </th>
 							<th> email </th>
 							<th>role</th>
@@ -54,8 +54,8 @@
 							<td> {{ utilisateur.prenom }}</td>
 							<td> {{ utilisateur.photo }} </td>
 							<td>{{ utilisateur.dateNaissance|date("d/m/Y") }}</td>
-							<td> {{ utilisateur.login }} </td>
-							<td> {{ utilisateur.passWord }}</td>
+							<td> {{ utilisateur.username }} </td>
+							<td> {{ utilisateur.plainPassword}}</td>
 							<td> {{ utilisateur.adresse }} </td>
 							<td> {{ utilisateur.email }} </td>
 							<td> {{ utilisateur.role }} </td>
@@ -72,7 +72,8 @@
 <br/><br/>
 <ul>
 {# <li> <a href="{{ path('user_affichage',{'id':'abonner.id'}) }}"> Voir un utilisateur donné </a></li> #}
-<li> <a href="{{ path('formutilisateur') }}"> Ajouter un utilisateur </a></li>
+{# <li> <a href="{{ path('formutilisateur') }}"> Ajouter un utilisateur </a></li> #}
+<li> <a href="{{ path('app_register') }}"> Ajouter un utilisateur </a></li>
 <li> <a href="{{ path('demarrage') }}"> Revenir à la page d'accueil </a></li>
 </ul>
 	</div>
