--- a/templates/user/modif_user.html.twig
+++ b/templates/user/modif_user.html.twig
@@ -1,8 +1,8 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Modification d'un user! {% endblock %}
+{% block title %} Modification de l'utilisateur {{ user.id}}! {% endblock %}
 
 {% block body %}
 
-form(formuser)
+{{ form(formuser) }}
 {% endblock %}
