complément avec location

--- a/templates/article/livre.html.twig
+++ b/templates/article/livre.html.twig
@@ -70,7 +70,11 @@
 				{% endfor %}
 			</tbody>
 		</table>
+<br/><br/>
+<hr/>
+<br/>
 
+<p> le total des articles est de {{ totalarticles }}</p>
 		<ul>
 		{# <li> <a href="{{ path('edit_modifier') }}"> Modifier un article</a> </li> #}
 			{# <li><a href="{{ path('art_affichage',{'id': 'prod.id'}) }}">Consulter un livre donné</a></li> #}
