--- a/templates/auteur/index.html.twig
+++ b/templates/auteur/index.html.twig
@@ -80,7 +80,16 @@
 				{% endfor %}
 			</tbody>
 		</table>
+<br<:><br/>
+<hr/>
+<br/>
+</:>
 
+		<p> le total des auteurs est de {{ totalauteurs }}</p>
+		<br><br/>
+		<hr/>
+		<br/>
+		
 		<ul>
 			{# <li> <a href="{{ path('edit_modifier') }}"> Modifier un article</a> </li> #}
 			{# <li><a href="{{ path('art_affichage',{'id': 'prod.id'}) }}">Consulter un livre donné</a></li> #}
