--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -98,6 +98,10 @@
 
 	<br><br>
 	<ul>
+		<li>	<a href="{{ path('search', :["id" => $user->getId]) }}"> Recherche détail d'un utilisateur </a></li>
+	</ul>
+	
+	<ul>
 		<li> <a href="{{ path('demarrage')}}"> Revenir à la page d'accueil </a> </li>
 	</ul>
 </div>
