--- a/templates/article/livre.html.twig
+++ b/templates/article/livre.html.twig
@@ -61,6 +61,7 @@
 						<td><a href="{{ path('edit_modifier', {'id': article.id}) }}"> Modifier l'article n° {{article.id}} </a></td>
 												<td><a href="{{ path('del_article', {'id': article.id}) }}"> Supprimer l'article n° {{article.id}} </a></td>
 												<td><a href="{{ path('index_commentaire') }}"> Liste des commentaires </a></td>
+												<td> <li><a href="{{ path('recherche_id',{'id' :article.id}) }}"> recherche </a></li></td>
 					</tr>
 				{% else %}
 					<tr>
