--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -71,7 +71,9 @@ Gestion des utilisateurs!
 
 		</tbody>
 	</table>
-
+<ul>
+	<li>	<a href="{{ path('utilisateur_id', {'id':utilisateur.id}) }}"> Recherche détail d'un utilisateur </a></li>
+</ul>
 	<br /><br />
 	<ul>
 		{# <li> <a href="{{ path('user_affichage',{'id':'abonner.id'}) }}"> Voir un utilisateur donné </a></li> #}
