--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -98,7 +98,7 @@
 
 	<br><br>
 	<ul>
-		<li>	<a href="{{ path('search', :["id" => $user->getId]) }}"> Recherche détail d'un utilisateur </a></li>
+		<li>	<a href="{{ path('search', {'id':user.id})}}"> Recherche détail d'un utilisateur </a></li>
 	</ul>
 	
 	<ul>
