--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,8 +4,17 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+	.example-wrapper {
+		margin: 1em auto;
+		max-width: 800px;
+		width: 95%;
+		font: 18px/1.5 sans-serif;
+	}
+
+	.example-wrapper code {
+		background: #F5F5F5;
+		padding: 2px 6px;
+	}
 </style>
 
 <div>
@@ -46,21 +55,29 @@
 				<th>
 					Roles
 				</th>
-			</tr>
-			<th>
-				Action
-			</th>
-			<th>
-				Modifier
-			</th>
-		
+				<th>
+					Statut
+				</th>
 
+				<th>
+					Action
+				</th>
+				<th>
+					Modifier
+				</th>
+				<th>
+					Editer
+				</th>
+			</tr>
 		</thead>
 		<tbody>
 			{% for user in users %}
 			<tr>
 				<td>
 					{{ user.id }} </td>
+
+				<td> {{ user.civilite }} </td>
+
 				<td>
 					{{ user.nom }}</td>
 				<td>
@@ -87,9 +104,10 @@
 				<td>
 					{{ role }}
 				</td>
+				{% endfor %}
+
 				<td> <a href="{{ path('user_id', {'id' :user.id}) }}"> Voir les détails de cet utilisateurs </a></td>
 				<td> <a href="{{ path('edit_user', {'id':user.id}) }}"> Modifier cet utilisateurs </a></td>
-				{% endfor %}
 				{% endfor %}
 			</tr>
 
@@ -98,9 +116,9 @@
 
 	<br><br>
 	<ul>
-		<li>	<a href="{{ path('search', {'id':user.id})}}"> Recherche détail d'un utilisateur </a></li>
+		{# <li> <a href="{{ path('search', {'id':user.id})}}"> Recherche détail d'un utilisateur </a></li> #}
 	</ul>
-	
+
 	<ul>
 		<li> <a href="{{ path('demarrage')}}"> Revenir à la page d'accueil </a> </li>
 	</ul>
