bundle d'image et paramétrage routes

--- a/templates/article/affichage.html.twig
+++ b/templates/article/affichage.html.twig
@@ -31,6 +31,7 @@
 <td>{{ articles.image }}</td>
 <td>{{ articles.resume }}</td>
 <td>{{ articles.date|date("d/m/Y") }}</td>
+<td>{{ articles.slug }}</td>
 </tr>
 </tbody>
 </table>
